--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700;800;900');
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@200;300;400;500;600;700;800;900');
+
+:root{
+  --fnt_main: 'Josefin Sans';
+  --fnt_text: 'Fira Mono';
+  --fnt_white: #ffffff;
+  --grn_btn: #3CC54C;
+}
+
 body{
+  font-family: var(--fnt_main);
+  color: var(--fnt_white);
   margin: 0px;  
 }
 
 .left_container{
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   background-color:#0065DC;
   width: 65%;
+}
+
+.left_container > * {
+  border: 1px solid black;
+}
+
+.title_text{
+  font-size: 78px;
+  font-weight: 600;
+}
+
+.introduction{
+  font-family: var(--fnt_text);
+}
+
+.homepage_btn button{
+  font-family: var(--fnt_main);
+  font-weight: 600;
+  font-size: 18px;
+  background-color: var(--grn_btn);
+  color: var(--fnt_white);
+  height: 56px;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 30px 10px 30px;
 }
