--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@
 
 body{
   font-family: var(--fnt_main);
-  color: var(--fnt_white);
   margin: 0px;  
 }
 
 .left_container{
+  color: var(--fnt_white);
   height: 100vh;
   background-color:#0065DC;
+ clip-path: polygon(0 0, 100% 0%, 90% 100%, 0% 100%);
   width: 65%;
+/*   transform: skew(25deg); */
   display: flex;
   flex-direction: column;
 }
@@ -84,4 +86,18 @@ body{
 .bottom{
   margin-top: auto;
   margin-bottom: 50px;
+}
+
+ /* 2nd section */
+
+.my_works_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.works_text{
+  padding: 30px;
+  font-size: 64px;
+  font-weight: bold;
 }
